include/gemini3d.h

extern void clean_param_C(int*, int*, void**, double**);
extern void rhoe2T_C(double**, double**);
extern void energy_diffusion_C(void**, int*, void**, double**, double**, void**, double*);
extern void source_loss_allparams_C(void**, double**, double**, double**, void**, int*, void**, 
                                      double*);
extern void source_loss_mass_C(void**, double**,double**,double**,void**,int*,void**,double*);
extern void source_loss_momentum_C(void**, double**,double**,double**,void**,int*,void**,double*);
extern void source_loss_energy_C(void**, double**,double**,double**,void**,int*,void**,double*);
extern void clear_ionization_arrays_C(void**);
extern void impact_ionization_C(void**,double**,void**,int*,void**,double*,double*,int*,double*,double*,double*,double*,double*);
extern void solar_ionization_C(void**,double**,void**,int*,void**,double*,int*,double*,double*,double*,double*,double*);
extern void set_electrodynamics_commtype_C(int*, void**);
extern void electrodynamics_test_C(void**,int*,void**,double**,double**,double**,void**);
extern void source_neut_C(void**,double**,void**,int*,void**);